Fixed stretched image scaling on  WebKit

--- a/src/components/Feature.css
+++ b/src/components/Feature.css
@@ -28,6 +28,8 @@ section.feature .illustration {
 
 section.feature .illustration.photo img {
     width: 100%;
+    object-fit: contain;
+    align-self: flex-start;
 }
 
 section.feature .illustration.graphic {
@@ -36,6 +38,7 @@ section.feature .illustration.graphic {
 
 section.feature .illustration.graphic img {
     width: 60%;
+    align-self: flex-start;
 }
 
 section.feature .content {
@@ -107,7 +110,6 @@ section.feature.left .content {
 }
 
 @media only screen and (max-width: 695px) {
-
     section.feature .illustration.graphic img {
         width: 80%;
     }
